<resources>
    <string name="app_name">TrackerDroid</string>
    <string name="title_activity_main">TrackerDroid</string>
    <string name="default_stepcounter_message">Please start walking to refresh the step counter</string>
    <string name="default_button_message">Press the button to start recording</string>
    <string name="default_record_message">Your current record is : </string>
    <string name="default_record_to_beat_message">The record you want to beat is : </string>
    <string name="title_activity_maps">Trajet</string>
    <string name="waypoints_arg_name">WayP0int$</string>
    <string name="travelmode_arg_name">tr@v3l</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="stitch_client_app_id">tracker-nrybu</string>
    <string name="permission_rationale_location">Access to the location service is required to record your trip.</string>
    <string name="location_permission_denied">Location is required in order to record your trip</string>
    <string name="permission_required_toast">Location permission is required.</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="confirm_deletion">You are about to delete a record.\nContinue?</string>
    <string name="status">Status</string>

    <string name="Status">Status:</string>
    <string name="Health">Health:</string>
    <string name="Level">Level:</string>

    <string name="RX">Receive RX:</string>
    <string name="TX">Transmit TX:</string>

</resources>
