<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.polymtl.inf8405.g2.trackerdroid.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8">
        <!--https://pixabay.com/fr/vectors/impression-de-pied-black-logo-308596/-->

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/footprint" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".2">

        <TextView
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:text="@string/default_record_message" />

        <TextView
            android:id="@+id/recordToBeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:text="@string/default_record_to_beat_message" />

        <TextView
            android:id="@+id/stepCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/default_button_message" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Battery:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/TStatus"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Status" />

                <TextView
                    android:id="@+id/Status"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/TH"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Health" />

                <TextView
                    android:id="@+id/Hl"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/TLevel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Level" />

                <TextView
                    android:id="@+id/Level"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Data:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/RX"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/RX" />

                <TextView
                    android:id="@+id/Rx"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/TX"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/TX" />

                <TextView
                    android:id="@+id/Tx"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

        </TableLayout>

    </FrameLayout>

</LinearLayout>
